docs-archive/apache-airflow-providers-google/19.5.0/_sources/_api/tests/system/google/cloud/gcs/example_gcs_to_sheets/index.rst.txt
tests.system.google.cloud.gcs.example_gcs_to_sheets
===================================================

.. py:module:: tests.system.google.cloud.gcs.example_gcs_to_sheets


Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_gcs_to_sheets.ENV_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.PROJECT_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.DAG_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.IS_COMPOSER
   tests.system.google.cloud.gcs.example_gcs_to_sheets.BUCKET_NAME
   tests.system.google.cloud.gcs.example_gcs_to_sheets.SPREADSHEET
   tests.system.google.cloud.gcs.example_gcs_to_sheets.CONNECTION_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.log
   tests.system.google.cloud.gcs.example_gcs_to_sheets.create_bucket
   tests.system.google.cloud.gcs.example_gcs_to_sheets.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'gcs_to_sheets'


.. py:data:: IS_COMPOSER

.. py:data:: BUCKET_NAME
   :value: 'bucket_gcs_to_sheets_Uninferable'


.. py:data:: SPREADSHEET

.. py:data:: CONNECTION_ID
   :value: 'connection_gcs_to_sheets_Uninferable'


.. py:data:: log

.. py:data:: create_bucket

.. py:data:: test_run

