docs-archive/apache-airflow-providers-google/22.6.0/_sources/_api/tests/system/google/cloud/gcs/example_gcs_to_sheets/index.rst.txt
tests.system.google.cloud.gcs.example_gcs_to_sheets
===================================================

.. py:module:: tests.system.google.cloud.gcs.example_gcs_to_sheets


Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_gcs_to_sheets.ENV_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.PROJECT_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.DAG_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.IS_COMPOSER
   tests.system.google.cloud.gcs.example_gcs_to_sheets.BUCKET_NAME
   tests.system.google.cloud.gcs.example_gcs_to_sheets.SPREADSHEET
   tests.system.google.cloud.gcs.example_gcs_to_sheets.CONNECTION_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.GDRIVE_SECRET_ID
   tests.system.google.cloud.gcs.example_gcs_to_sheets.log
   tests.system.google.cloud.gcs.example_gcs_to_sheets.test_run


Functions
---------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_gcs_to_sheets.get_shared_drive_id


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'gcs_to_sheets'


.. py:data:: IS_COMPOSER

.. py:data:: BUCKET_NAME

.. py:data:: SPREADSHEET

.. py:data:: CONNECTION_ID

.. py:data:: GDRIVE_SECRET_ID
   :value: 'gdrive_shared_folder_id'


.. py:data:: log

.. py:function:: get_shared_drive_id()

.. py:data:: test_run

